--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "dependencies": {
-        "axios": "^0.19.2",
+        "axios": "^0.24.0",
         "lazysizes": "^5.1.2",
         "lodash": "^4.17.15",
         "normalize.css": "^8.0.1",
@@ -24,19 +24,20 @@
         "babel-loader": "^8.1.0",
         "clean-webpack-plugin": "^3.0.0",
         "css-loader": "^3.2.0",
-        "cssnano": "^4.1.10",
+        "cssnano": "^5.0.12",
         "fs-extra": "^9.0.0",
         "html-webpack-plugin": "^4.3.0",
-        "mini-css-extract-plugin": "^0.9.0",
+        "mini-css-extract-plugin": "^2.4.5",
+        "postcss": "^8.4.5",
         "postcss-hexrgba": "^2.0.0",
         "postcss-import": "^12.0.1",
-        "postcss-loader": "^3.0.0",
-        "postcss-mixins": "^6.2.2",
+        "postcss-loader": "^6.2.1",
+        "postcss-mixins": "^9.0.1",
         "postcss-nested": "^4.1.2",
         "postcss-simple-vars": "^5.0.2",
         "style-loader": "^1.0.0",
-        "webpack": "^4.41.0",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.9.0"
+        "webpack": "^5.65.0",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.6.0"
     }
 }
